--- a/index.html
+++ b/index.html
@@ -3,75 +3,94 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Splitter</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To_Do_List</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/71d07fa621.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-    <nav>
-        <h1>ESPLITIFY</h1>
-        <small>Split your bills with ease...</small>
-    </nav>
+    <main class="app">
 
-    <div class="container center">
-        <div class="bill-divider-wrapper">
-            <div class="title">
-                <h2>Bill Split</h2>
-            </div>
+        <section class="greeting">
+            <h2 class="title">
+                Hello, <input type="text" id="name" placeholder="Name here">
+            </h2>
+        </section>
 
-            <div class="bills-inputs">
-                <form id="bill-divider-form">
-                    <div class="form-group">
-                        <label for="subtotal">Subtotal bill (&#x20AC; /&#8358; /&#36) </label>
-                        <input type="number" id="subtotal" class="form-control" min="0" step="any" required>
+        <section class="create-todo">
+            <h3>CREATE A TODO</h3>
+            <form id="new-todo-form">
+                <h4>What's on your todo list?</h4>
+                <input type="text" name="content" id="content" placeholder="e.g. study for quiz">
+
+                <h4>Select Category</h4>
+                <div class="options">
+
+                    <label for="">
+                        <input type="radio" name="category" id="category1" value="business">
+                        <span class="bubble business"></span>
+                        <div>Business</div>
+                    </label>
+
+                    <label for="">
+                        <input type="radio" name="category" id="category2" value="personal">
+                        <span class="bubble personal"></span>
+                        <div>Personal</div>
+                    </label>
+
+                </div>
+                    <input type="submit" value="Add Todo">
+
+            </form>
+        </section>
+
+        <section class="todo-list">
+            <h3>TODO LIST</h3>
+            <div class="list" id="todo-list">
+                <div class="todo-item">
+                    <label>
+                        <input type="checkbox">
+                        <span class="bubble business"></span>
+                    </label>
+
+                    <div class="todo-content">
+                        <input type="text" value="study for quiz" readonly>
                     </div>
 
-                    <div class="form-group">
-                        <label for="tip">Tip (%)</label>
-                        <input type="number" id="tip" class="form-control" min="0" step="any" required>
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="delete">Delete</button>
+                    </div>
+                </div>
+
+
+                <h3>TODO LIST</h3>
+                <div class="list" id="todo-list">
+                    <div class="todo-item">
+                        <label>
+                            <input type="checkbox">
+                            <span class="bubble personal"></span>
+                        </label>
+
+                        <div class="todo-content">
+                            <input type="text" value="Get Milk" readonly>
+                        </div>
+
+                        <div class="actions">
+                            <button class="edit">Edit</button>
+                            <button class="delete">Delete</button>
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="no-of-person(s)">No. Of Person(s)</label>
-                        <input type="number" id="no-of-person" class="form-control" min="2" step="1" required>
-                    </div>
-
-                    <input type="submit" id="calc-btn" value="calculate">
-                </form>
-            </div>
-
-            <div class="bill-output">
-                <div class="text-group">
-                    <h3>Total Bill</h3>
-                    <span id="total-bill">$ 00.00</span>
                 </div>
-
-                <div class="text-group">
-                    <h3>Bill Per Person</h3>
-                    <span id="bill-per-person">$ 00.00</span>
-                </div>
-
-                <div class="text-group">
-                    <h3>Total Tip</h3>
-                    <span id="total-tip">$ 00.00</span>
-                </div>
-
-                <div class="text-group">
-                    <h3>Tip Per Person</h3>
-                    <span id="tip-per-person">$ 00.00</span>
-                </div>
-                <input type="reset" id="clear-btn" value="Clear Bill" class="clear">
-
-            </div>
-
-        </div>
-
-    </div>
-
-
-
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 
