--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <section class="greeting">
             <h2 class="title">
-                Hello, <input type="text" id="name" placeholder="Name here">
+                Hello, <input type="text" id="name" placeholder="Name here" required>
             </h2>
         </section>
 
@@ -32,13 +32,13 @@
                 <h4>Select Category</h4>
                 <div class="options">
 
-                    <label for="">
+                    <label>
                         <input type="radio" name="category" id="category1" value="business">
                         <span class="bubble business"></span>
                         <div>Business</div>
                     </label>
 
-                    <label for="">
+                    <label>
                         <input type="radio" name="category" id="category2" value="personal">
                         <span class="bubble personal"></span>
                         <div>Personal</div>
@@ -53,14 +53,14 @@
         <section class="todo-list">
             <h3>TODO LIST</h3>
             <div class="list" id="todo-list">
-                <div class="todo-item">
+             <!-- <div class="todo-item done">
                     <label>
                         <input type="checkbox">
                         <span class="bubble business"></span>
                     </label>
 
                     <div class="todo-content">
-                        <input type="text" value="study for quiz" readonly>
+                        <input type="text" value="Study for quiz" readonly>
                     </div>
 
                     <div class="actions">
@@ -86,7 +86,7 @@
                             <button class="edit">Edit</button>
                             <button class="delete">Delete</button>
                         </div>
-                    </div>
+                    </div>-->  
 
                 </div>
         </section>
